# ComfyUI-Modal

./: .gitignore  AGENTS.md  README.md  __init__.py  api_intercept.py  comfyui_modal_sync_cloud.py  modal_executor_node.py  modal_test_workflow.json  pyproject.toml  serialization.py  session_state.py  settings.py  sync_engine.py
docs/: LEARNINGS.md  UPNEXT.md
remote/: __init__.py  modal_app.py
tests/: conftest.py  modal_toggle_frontend.test.mjs  test_api_intercept.py  test_logging.py  test_modal_executor_node.py  test_modal_stream_progress.py  test_modal_test_workflow.py  test_modal_toggle_frontend.py  test_serialization.py  test_session_state.py  test_settings.py  test_sync_engine.py  test_web_modal_toggle.py
tests/fixtures/: modal_hybrid_split_regression.json
web/: modal_toggle.js
