[project]
name = "modal-sync"
version = "0.1.2"
description = "ComfyUI custom node extension for routing marked nodes to Modal-backed execution."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/ttulttul/ComfyUI-Modal"
"Bug Tracker" = "https://github.com/ttulttul/ComfyUI-Modal/issues"

[dependency-groups]
test = [
    "aiohttp",
    "numpy",
    "pillow",
    "pytest",
    "safetensors",
    "torch",
    "tqdm",
]

[tool.comfy]
PublisherId = "ttulttul"
DisplayName = "Modal Sync"
Icon = "https://raw.githubusercontent.com/ttulttul/ComfyUI-Modal/main/icon.jpg"
requires-comfyui = ">=0.11.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
